<resources>
    <string name="app_name">LittlePig</string>
    <string name="text_button_login">Acessar</string>
    <string name="text_button_register">Cadastrar</string>
    <string name="text_back">Voltar</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">Seu nome</string>
    <string name="hint_password">Senha</string>
    <string name="create_free_account">Criar uma conta gratuita</string>
    <string name="my_transactions">Minhas movimentações</string>
    <string name="last_transactions">Últimas movimentações</string>
    <string name="current_balance">Saldo atual</string>
    <string name="today_entries">Entradas de hoje</string>
    <string name="today_outings">Saídas de hoje</string>
    <string name="attention">Atenção</string>
    <string name="ensure_delete">Você tem certeza que deseja deletar esse registro?</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_confirm">Confirmar</string>
    <string name="drawer_open">Abrir</string>
    <string name="drawer_close">Fechar</string>
    <string name="welcome">Bem-vindo</string>
    <string name="name">Nome</string>
    <string name="value_desired">Valor desejado</string>
    <string name="receipt">Receita</string>
    <string name="expense">Despesa</string>
    <string name="register">Registrar</string>
    <string name="create_successfully">Criado com sucesso!</string>
    <string name="required_field">Campo obrigatório</string>

    <!-- Error messages-->
    <string name="error_unauthorized">Você não tem permissão para esta operação</string>
    <string name="error_not_found">Recurso não encontrado</string>
    <string name="error_empty_response">Nenhum dado disponível</string>
    <string name="error_session_expired">Sessão expirada. Faça login novamente</string>
    <string name="error_generic">Ocorreu um erro inesperado</string>
    <string name="error_invalid_data">Dados inválidos. Verifique as informações</string>
    <string name="error_network">Erro de conexão. Verifique sua internet</string>
    <string name="error_token_not_found">Token não encontrado</string>
    <string name="empty_transaction_date">Campo \"data\" está vazio. Por favor, preencha</string>
    <string name="empty_transaction_description">Descrição da transação está vazio. Por favor, preencha</string>
    <string name="no_transaction_value">Valor da transação está vazio. Por favor, preencha</string>
    <string name="field_invalid">Campo inválido</string>
</resources>