<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray">

    <ImageView
        android:id="@+id/icon_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:src="@drawable/cash_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/field_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_dp_size"
        android:layout_marginHorizontal="@dimen/thirty_dp_size"
        android:layout_marginTop="@dimen/six_hundred_dp_size"
        android:background="@drawable/edit_text_container"
        android:backgroundTint="@color/white"
        android:hint="@string/hint_email"
        android:paddingStart="@dimen/ten_dp_size"
        android:text="email2@email.com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_logo" />

    <EditText
        android:id="@+id/field_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_dp_size"
        android:layout_marginHorizontal="@dimen/thirty_dp_size"
        android:layout_marginTop="@dimen/fifteen_dp_size"
        android:background="@drawable/edit_text_container"
        android:backgroundTint="@color/white"
        android:hint="@string/hint_password"
        android:paddingStart="@dimen/ten_dp_size"
        android:text="senha1234"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/thirty_dp_size"
        android:layout_marginTop="@dimen/fifteen_dp_size"
        android:backgroundTint="@color/blue"
        android:clickable="true"
        android:background="@drawable/main_button_selector"
        android:focusable="true"
        android:text="@string/text_button_login"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_password" />

    <TextView
        android:id="@+id/create_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fifteen_dp_size"
        android:text="@string/create_free_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

</androidx.constraintlayout.widget.ConstraintLayout>