<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray">

    <Toolbar
        android:id="@+id/toolbar_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icon_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/thirty_dp_size"
            android:text="@string/text_back"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_two_sp_size" />

    </Toolbar>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/field_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_dp_size"
        android:layout_marginHorizontal="@dimen/thirty_dp_size"
        android:layout_marginBottom="@dimen/fifteen_dp_size"
        android:background="@drawable/edit_text_container"
        android:backgroundTint="@color/white"
        android:hint="@string/hint_username"
        android:paddingStart="@dimen/ten_dp_size"
        app:layout_constraintBottom_toTopOf="@id/field_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_register"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/field_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_dp_size"
        android:layout_marginHorizontal="@dimen/thirty_dp_size"
        android:layout_marginTop="@dimen/fifteen_dp_size"
        android:background="@drawable/edit_text_container"
        android:backgroundTint="@color/white"
        android:hint="@string/hint_email"
        android:paddingStart="@dimen/ten_dp_size"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/field_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_dp_size"
        android:layout_marginHorizontal="@dimen/thirty_dp_size"
        android:layout_marginTop="@dimen/fifteen_dp_size"
        android:background="@drawable/edit_text_container"
        android:backgroundTint="@color/white"
        android:hint="@string/hint_password"
        android:paddingStart="@dimen/ten_dp_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/thirty_dp_size"
        android:layout_marginTop="@dimen/fifteen_dp_size"
        android:clickable="true"
        android:background="@drawable/main_button_selector"
        android:focusable="true"
        android:text="@string/text_button_register"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_password" />

</androidx.constraintlayout.widget.ConstraintLayout>